# Image-Processing-in-C

./: .gitignore  AbstractPadding.cpp  AbstractPadding.hpp  CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.hpp  FFTPix.cpp  FFTPix.hpp  ImagePix.hpp  ImageTools.cpp  ImageTools.hpp  MirrorPadding.cpp  MirrorPadding.hpp  PeriodizationPadding.cpp  PeriodizationPadding.hpp  Unpad.cpp  Unpad.hpp  ZeroPadding.cpp  ZeroPadding.hpp  main  main.cpp  output.m  readme.txt  testfft  testfft.cpp  testfilter  testfilter.cpp  testhisto  testhisto.cpp  testpad  testpad.cpp
html/: _abstract_d_f_t_8hpp_source.html  _abstract_padding_8hpp_source.html  _complex_number_8hpp_source.html  _f_f_t_pix_8hpp_source.html  _image_pix_8hpp_source.html  _image_tools_8hpp_source.html  _mirror_padding_8hpp_source.html  _periodization_padding_8hpp_source.html  _unpad_8hpp_source.html  _zero_padding_8hpp_source.html  annotated.html  class_abstract_padding-members.html  class_abstract_padding.html  class_complex_number-members.html  class_complex_number.html  class_f_f_t_pix-members.html  class_f_f_t_pix.html  class_image_pix-members.html  class_image_pix.html  class_mirror_padding-members.html  class_mirror_padding.html  class_periodization_padding-members.html  class_periodization_padding.html  class_unpad-members.html  class_unpad.html  class_zero_padding-members.html  class_zero_padding.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  classes_2.js  classes_4.js  classes_6.js  functions_0.js  searchdata.js
latex/: annotated.tex  class_abstract_padding.eps  class_abstract_padding.tex  class_complex_number.tex  class_f_f_t_pix.tex  class_image_pix.tex  class_mirror_padding.eps  class_mirror_padding.tex  class_periodization_padding.eps  class_periodization_padding.tex  class_unpad.eps  class_unpad.tex  class_zero_padding.eps  class_zero_padding.tex  hierarchy.tex  index.tex  refman.tex
